--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         var confirmPassword = "admin";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
-             window.location="https://meganathan16.github.io/b.m/";
+             window.location="";
         }
         else{
             alert("Passwords do not match.");
@@ -33,5 +33,59 @@
       
    
 </body>
-</html
-  
+</html>
+
+<html>
+
+</html>
+<html>
+<marquee> <b> WELCOME </b> </marquee>
+<Style>
+
+.square{
+height: 250px;
+width: 300px;
+background-color: red;
+text-align: center;
+margin: 0 auto; 
+}
+
+</style>
+<script>
+ var i = 0;
+function change() {
+  var doc = document.getElementById("background");
+  var color = ["green", "orange", "yellow", "red"];
+  doc.style.backgroundColor = color[i];
+  i = (i + 1) % color.length;
+}
+setInterval(change, 1000);
+</script>
+<body>
+<div class="square"> 
+ <div id="background" style="height: 250px;" style="width: 300px;">
+<p> SRI THERI SWAMY THUNAI </P>
+<style>
+.circle{
+       height: 30px;
+	   width: 30px;
+	   border-radius: 50%; 
+	   background-color: gold;
+	   background-image: url("perriyappa.jpg");
+	   text-align: center;
+	   margin: 0 auto;
+}
+
+</style>
+<body> 
+<div class="circle"> 
+<p> HT </p>
+</div>
+<p> HARI TRAVELS </P>
+<P> ETIOS,TAVERA AVAILABLE FOR TOUR ONLY IN TAMILNADU</P>
+<P> FOR ANY OTHER DETAILS CONTACT: 9443438448,9443958538,9787084105 </P>
+<P> TIMING: 24/7 </P>
+</div>
+</body>
+</html>	 
+	 
