--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         var confirmPassword = "admin";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
-             window.location="https://meganathan16.github.io/b.m/";
+             window.location="https://meganathan16.github.io/bm/";
         }
         else{
             alert("Passwords do not match.");
