--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ var password = "please";
 var x = prompt("Enter in the password "," ");
 if (x.toLowerCase() == password) {
  alert("Come right in \n \n You've entered in the right password");
- window.location = "index.html";
+ window.location = "index1.html";
 }
 else {
  window.location = "bad.htm";
