--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 <script src="javascript 1.js"> </script>
 <script src="javascript 2.js"> </script>
+<script src="javascript 3.js"> </script>
+<script src="javascript 4.js"> </script>
+<script src="javascript 5.js"> </script>
+<script src="javascript 6.js"> </script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
