--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ body {
 }
 .square{
 padding-top:1px;
+border: 2px solid #000000;
 border-top-left-radius: 50px;
 border-bottom-right-radius : 50px;
 height: 330px;
@@ -96,6 +97,7 @@ margin: 0 auto;
 .circle{
   height: 50px;
   width: 50px;
+  border: 2px solid #32557f;
   border-radius: 50%;
   margin: 0 auto;
   background-image: url(bird.png);
@@ -131,6 +133,7 @@ margin: 0 auto;
 <style>
 .container {
 padding-top:1px;
+border: 2px solid #000000;
 border-top-left-radius: 50px;
 border-bottom-right-radius : 50px;
 height: 330px;
@@ -159,6 +162,7 @@ margin: 0 auto;
 .round{
   height: 50px;
   width: 50px;
+  border: 2px solid #32557f;
   border-radius: 50%;
   margin: 0 auto;
   background-image: url(clock.jpg);
