--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <script src="javascript 1.js"> </script>
 <script src="javascript 2.js"> </script>
-<meta property="og:title" content="11 STANDARD" />
-<meta property="og:description" content="11 STANDARD" />
-<meta property="og:url" content="https://meganathan16.github.io/bm/" />
+<meta property="og:title" content="11 STANDARD,12 STANDARD" />
+<meta property="og:description" content="11 STANDARD,12 STANDARD" />
+<meta property="og:url" content="https://meganathan16.github.io/b.m/" />
 <meta property="og:image" content="https://t3.ftcdn.net/jpg/01/22/14/34/360_F_122143473_7KDnyB7t3Ubi760FXQjSFn8OW0aROBtL.jpg" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
