--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <meta property="og:description" content="11 STANDARD,12 STANDARD" />
 <meta property="og:url" content="https://meganathan16.github.io/b.m/" />
 <meta property="og:image" content="https://t3.ftcdn.net/jpg/01/22/14/34/360_F_122143473_7KDnyB7t3Ubi760FXQjSFn8OW0aROBtL.jpg" />
+<meta property="og:image:width" content="100px" />
+<meta property="og:image:height" content="50px" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
